Arreglo de scaler en X_test, usando sólo el método tranform

--- a/Electrical_fault_multiclass.ipynb
+++ b/Electrical_fault_multiclass.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "77119000-4181-497e-a748-4988bf93faa6",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "[7861 rows x 10 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "2178514f-777a-42c2-96d6-c6046c3810b7",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "5d44a121-0602-4b3b-b7d6-8709d4e84532",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
        "Name: A, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "ab5906bf-c73e-4840-8b34-b5a6b803c350",
    "metadata": {},
    "outputs": [],
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "52452d5d-5b1f-4be7-ae9c-fe74e862e527",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
        "[7861 rows x 11 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "ad870b7c-511d-4c99-b111-c9ebc2ac2211",
    "metadata": {},
    "outputs": [],
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "466dc3d7-5dd4-4b88-a080-2fa5d3578261",
    "metadata": {},
    "outputs": [
@@ -841,7 +841,7 @@
        "[7861 rows x 12 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "972cb276-fef6-4d01-9c88-f087b03087f6",
    "metadata": {},
    "outputs": [
@@ -926,7 +926,7 @@
        "5       14.412925"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "id": "955acf0e-2b27-48cc-a6fe-98e387eb7253",
    "metadata": {},
    "outputs": [
@@ -1011,7 +1011,7 @@
        "No hay falla                          30.085231"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 38,
    "id": "a6dc937c-9c3f-4c1b-8178-2574cf3f624f",
    "metadata": {},
    "outputs": [],
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 39,
    "id": "97a10d3d-4cf3-4c14-b34e-74eb7458fd36",
    "metadata": {},
    "outputs": [],
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 40,
    "id": "63cc17ba-cce2-49d8-b144-2f6feaed1c56",
    "metadata": {},
    "outputs": [],
@@ -1054,12 +1054,12 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler()\n",
     "X_train_scaler = scaler.fit_transform(X_train)\n",
-    "X_test_scaler = scaler.fit_transform(X_test)"
+    "X_test_scaler = scaler.transform(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "id": "80405f91-04a1-470d-84c6-dbd794155888",
    "metadata": {},
    "outputs": [],
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 42,
    "id": "a80c1e09-9f6d-489d-91ce-5b4953c23aa4",
    "metadata": {},
    "outputs": [
@@ -1079,7 +1079,7 @@
        "KNeighborsClassifier()"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 43,
    "id": "284a99b2-6e72-4402-b7ab-76cbfd9e694f",
    "metadata": {},
    "outputs": [],
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 44,
    "id": "a7d65ea6-628c-4ccf-a81a-6838bed96554",
    "metadata": {},
    "outputs": [
@@ -1118,7 +1118,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 45,
    "id": "38c109e6-1c2f-4f72-8d2f-4871e7f80408",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1161,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 46,
    "id": "c581ef9c-a417-474c-bf76-9c60912f3c11",
    "metadata": {},
    "outputs": [
@@ -1439,7 +1439,7 @@
        "[7861 rows x 13 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 47,
    "id": "83a8548f-c9a1-4e99-b092-3073769eb69e",
    "metadata": {},
    "outputs": [
@@ -1503,7 +1503,7 @@
        "1               69.914769"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 48,
    "id": "85f839cf-63dc-43d8-8997-01e6bccfb896",
    "metadata": {},
    "outputs": [],
@@ -1527,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 49,
    "id": "1a5429fd-dade-4136-a9e6-7aa17c805be8",
    "metadata": {},
    "outputs": [],
@@ -1537,19 +1537,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 50,
    "id": "efb0fd08-5b16-478a-9217-ab66cbb7462d",
    "metadata": {},
    "outputs": [],
    "source": [
     "scaler = StandardScaler()\n",
     "X_train_scaler = scaler.fit_transform(X_train)\n",
-    "X_test_scaler = scaler.fit_transform(X_test)"
+    "X_test_scaler = scaler.transform(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 51,
    "id": "796672e5-ce94-4975-b495-8e52ee6171ca",
    "metadata": {},
    "outputs": [
@@ -1559,7 +1559,7 @@
        "KNeighborsClassifier()"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 52,
    "id": "d482fd96-bc4f-4ea3-b8f9-8edea78e76ff",
    "metadata": {},
    "outputs": [],
@@ -1581,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 53,
    "id": "886610dc-4af3-46fc-8654-f70f9b69c514",
    "metadata": {},
    "outputs": [
@@ -1598,7 +1598,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1623,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 54,
    "id": "6afb2b73-e494-4e38-a77d-3b36ea440dbf",
    "metadata": {},
    "outputs": [
@@ -1640,7 +1640,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     },
