--- a/Electrical_fault_multiclass.ipynb
+++ b/Electrical_fault_multiclass.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 228,
    "id": "8085bfa7-cacd-4a6a-bdca-9e316c11ad0b",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 229,
    "id": "77119000-4181-497e-a748-4988bf93faa6",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "[7861 rows x 10 columns]"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 230,
    "id": "2178514f-777a-42c2-96d6-c6046c3810b7",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 231,
    "id": "5d44a121-0602-4b3b-b7d6-8709d4e84532",
    "metadata": {},
    "outputs": [
@@ -294,7 +294,7 @@
        "Name: A, dtype: int64"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 232,
    "id": "ab5906bf-c73e-4840-8b34-b5a6b803c350",
    "metadata": {},
    "outputs": [],
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 233,
    "id": "52452d5d-5b1f-4be7-ae9c-fe74e862e527",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
        "[7861 rows x 11 columns]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 234,
    "id": "ad870b7c-511d-4c99-b111-c9ebc2ac2211",
    "metadata": {},
    "outputs": [],
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 235,
    "id": "466dc3d7-5dd4-4b88-a080-2fa5d3578261",
    "metadata": {},
    "outputs": [
@@ -840,7 +840,7 @@
        "[7861 rows x 12 columns]"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 236,
    "id": "972cb276-fef6-4d01-9c88-f087b03087f6",
    "metadata": {},
    "outputs": [
@@ -925,7 +925,7 @@
        "5       14.412925"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 237,
    "id": "955acf0e-2b27-48cc-a6fe-98e387eb7253",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1010,7 @@
        "No hay falla                          30.085231"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 238,
    "id": "c151fa33-f16c-442a-8928-239d5024ee6b",
    "metadata": {},
    "outputs": [
@@ -1275,7 +1275,7 @@
        "[7861 rows x 13 columns]"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 239,
    "id": "b7e767d3-428f-41bb-b455-70d9a6e84652",
    "metadata": {},
    "outputs": [
@@ -1339,7 +1339,7 @@
        "1               69.914769"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 240,
    "id": "2f63d014-a5cc-45ba-bd90-ddd51210579c",
    "metadata": {},
    "outputs": [],
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 241,
    "id": "9558091e-10bb-44f0-b565-12bb970846d8",
    "metadata": {},
    "outputs": [],
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 242,
    "id": "489d3f71-c21d-46ad-844f-439455286767",
    "metadata": {},
    "outputs": [],
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 243,
    "id": "81892ec5-c605-4145-a245-7d0d83690202",
    "metadata": {},
    "outputs": [],
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 244,
    "id": "ada5c9f1-3f7a-4e04-9ea6-47c0b14297c8",
    "metadata": {},
    "outputs": [],
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 245,
    "id": "82ee68ce-1f35-47bc-86bc-c65ca968cdae",
    "metadata": {},
    "outputs": [],
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 246,
    "id": "e824584f-d555-4124-aea6-9a6007f010ec",
    "metadata": {},
    "outputs": [
@@ -1425,7 +1425,7 @@
        "KNeighborsClassifier()"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 247,
    "id": "ce2917eb-ade9-437f-adbc-f6455bb78a9d",
    "metadata": {},
    "outputs": [],
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 248,
    "id": "922a35d8-329b-458f-9a59-4444645bea71",
    "metadata": {},
    "outputs": [],
@@ -1457,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 249,
    "id": "980dce4c-4ffc-4af5-a5b8-8190391d2d39",
    "metadata": {},
    "outputs": [
@@ -1474,7 +1474,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 250,
    "id": "2395b107-236f-4564-9c7a-e9aeb845d80b",
    "metadata": {},
    "outputs": [
@@ -1516,7 +1516,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1542,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 251,
    "id": "a6dc937c-9c3f-4c1b-8178-2574cf3f624f",
    "metadata": {},
    "outputs": [],
@@ -1553,17 +1553,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 252,
    "id": "97a10d3d-4cf3-4c14-b34e-74eb7458fd36",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, stratify=y, random_state=0)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y,stratify=y, random_state=0) #"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 253,
    "id": "63cc17ba-cce2-49d8-b144-2f6feaed1c56",
    "metadata": {},
    "outputs": [],
@@ -1575,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 254,
    "id": "a80c1e09-9f6d-489d-91ce-5b4953c23aa4",
    "metadata": {},
    "outputs": [
@@ -1585,7 +1585,7 @@
        "KNeighborsClassifier()"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1597,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 255,
    "id": "284a99b2-6e72-4402-b7ab-76cbfd9e694f",
    "metadata": {},
    "outputs": [],
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 256,
    "id": "a7d65ea6-628c-4ccf-a81a-6838bed96554",
    "metadata": {},
    "outputs": [
@@ -1624,7 +1624,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 257,
    "id": "38c109e6-1c2f-4f72-8d2f-4871e7f80408",
    "metadata": {},
    "outputs": [
@@ -1666,7 +1666,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1692,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 258,
    "id": "c0f016b5-d507-40df-b12d-07dee010ad22",
    "metadata": {},
    "outputs": [],
@@ -1704,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 259,
    "id": "33185220-5c90-4b4a-a0a7-20922e47570a",
    "metadata": {},
    "outputs": [],
@@ -1714,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 260,
    "id": "d816c04a-bf76-478e-834f-fcce95a29c64",
    "metadata": {},
    "outputs": [],
@@ -1724,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 261,
    "id": "b4998ab3-55b1-4d67-b210-60ebcb8298a0",
    "metadata": {},
    "outputs": [
@@ -1740,7 +1740,7 @@
        "             scoring='accuracy')"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1751,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 262,
    "id": "d91855c6-575c-4ec8-81eb-aef1f3fa957f",
    "metadata": {},
    "outputs": [
@@ -1801,10 +1801,10 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.010653</td>\n",
-       "      <td>0.001636</td>\n",
-       "      <td>0.025709</td>\n",
-       "      <td>0.006742</td>\n",
+       "      <td>0.010176</td>\n",
+       "      <td>0.000737</td>\n",
+       "      <td>0.020349</td>\n",
+       "      <td>0.001107</td>\n",
        "      <td>1</td>\n",
        "      <td>uniform</td>\n",
        "      <td>{'n_neighbors': 1, 'weights': 'uniform'}</td>\n",
@@ -1824,10 +1824,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.010112</td>\n",
-       "      <td>0.001222</td>\n",
-       "      <td>0.003215</td>\n",
-       "      <td>0.001182</td>\n",
+       "      <td>0.009573</td>\n",
+       "      <td>0.000487</td>\n",
+       "      <td>0.003493</td>\n",
+       "      <td>0.000498</td>\n",
        "      <td>1</td>\n",
        "      <td>distance</td>\n",
        "      <td>{'n_neighbors': 1, 'weights': 'distance'}</td>\n",
@@ -1847,10 +1847,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.009750</td>\n",
-       "      <td>0.003364</td>\n",
-       "      <td>0.025225</td>\n",
-       "      <td>0.005147</td>\n",
+       "      <td>0.011464</td>\n",
+       "      <td>0.001121</td>\n",
+       "      <td>0.024543</td>\n",
+       "      <td>0.002997</td>\n",
        "      <td>2</td>\n",
        "      <td>uniform</td>\n",
        "      <td>{'n_neighbors': 2, 'weights': 'uniform'}</td>\n",
@@ -1870,10 +1870,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.010425</td>\n",
-       "      <td>0.001459</td>\n",
-       "      <td>0.003988</td>\n",
-       "      <td>0.000447</td>\n",
+       "      <td>0.010170</td>\n",
+       "      <td>0.000735</td>\n",
+       "      <td>0.004288</td>\n",
+       "      <td>0.000639</td>\n",
        "      <td>2</td>\n",
        "      <td>distance</td>\n",
        "      <td>{'n_neighbors': 2, 'weights': 'distance'}</td>\n",
@@ -1893,10 +1893,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.010676</td>\n",
-       "      <td>0.001885</td>\n",
-       "      <td>0.021798</td>\n",
-       "      <td>0.002715</td>\n",
+       "      <td>0.009877</td>\n",
+       "      <td>0.001222</td>\n",
+       "      <td>0.023437</td>\n",
+       "      <td>0.004042</td>\n",
        "      <td>3</td>\n",
        "      <td>uniform</td>\n",
        "      <td>{'n_neighbors': 3, 'weights': 'uniform'}</td>\n",
@@ -1920,11 +1920,11 @@
       ],
       "text/plain": [
        "   mean_fit_time  std_fit_time  mean_score_time  std_score_time  \\\n",
-       "0       0.010653      0.001636         0.025709        0.006742   \n",
-       "1       0.010112      0.001222         0.003215        0.001182   \n",
-       "2       0.009750      0.003364         0.025225        0.005147   \n",
-       "3       0.010425      0.001459         0.003988        0.000447   \n",
-       "4       0.010676      0.001885         0.021798        0.002715   \n",
+       "0       0.010176      0.000737         0.020349        0.001107   \n",
+       "1       0.009573      0.000487         0.003493        0.000498   \n",
+       "2       0.011464      0.001121         0.024543        0.002997   \n",
+       "3       0.010170      0.000735         0.004288        0.000639   \n",
+       "4       0.009877      0.001222         0.023437        0.004042   \n",
        "\n",
        "  param_n_neighbors param_weights                                     params  \\\n",
        "0                 1       uniform   {'n_neighbors': 1, 'weights': 'uniform'}   \n",
@@ -1962,7 +1962,7 @@
        "4               60  "
       ]
      },
-     "execution_count": 180,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1974,7 +1974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 263,
    "id": "c455a2c4-e6ef-4958-bbdc-e89541610128",
    "metadata": {},
    "outputs": [
@@ -1984,7 +1984,7 @@
        "KNeighborsClassifier(n_neighbors=1)"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1995,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 264,
    "id": "7d7e7299-443e-43ab-916e-8281cc2d687e",
    "metadata": {},
    "outputs": [
@@ -2005,7 +2005,7 @@
        "0.874808206958073"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2016,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 265,
    "id": "4ddc6ca1-93bc-4596-8b67-27d96ebf1da8",
    "metadata": {},
    "outputs": [
@@ -2026,7 +2026,7 @@
        "{'n_neighbors': 1, 'weights': 'uniform'}"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2037,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 266,
    "id": "40c438ff-044f-4902-9dae-1d0dda01a800",
    "metadata": {},
    "outputs": [],
@@ -2047,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 267,
    "id": "c32b926f-6047-43fc-9058-85d7be4106f9",
    "metadata": {},
    "outputs": [
@@ -2075,12 +2075,12 @@
     "target_names = ['No Falla','Falla entre fase A y fase B','Falla en todas las fases',\n",
     "                'Falla entre fase A y tierra','Falla entre fase A,B y tierra',\n",
     "                'Falla entre todas las fases y tierra']\n",
-    "print (classification_report(y_test, y_pred_grid,target_names=target_names))"
+    "print(classification_report(y_test, y_pred_grid,target_names=target_names))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 268,
    "id": "d5bba93c-7ab9-461e-8400-e55357548f5e",
    "metadata": {},
    "outputs": [
@@ -2090,7 +2090,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     },
